--- a/Apps.GoogleDrive/Apps.GoogleDrive.csproj
+++ b/Apps.GoogleDrive/Apps.GoogleDrive.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-	<Product>Blackbird Google Drive</Product>
+	<Product>Google Drive</Product>
 	<Description>Blackbird Google Drive</Description>
 	<Version>1.0.5</Version>
 	<AssemblyName>Apps.GoogleDrive</AssemblyName>
