--- a/Apps.GoogleDrive/Apps.GoogleDrive.csproj
+++ b/Apps.GoogleDrive/Apps.GoogleDrive.csproj
@@ -5,7 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 	<Product>Google Drive</Product>
-	<Description>Google Drive</Description>
+	<Description>File storage and synchronization service.</Description>
 	<Version>1.0.6</Version>
 	<AssemblyName>Apps.GoogleDrive</AssemblyName>
   </PropertyGroup>
