--- a/Apps.GoogleDrive/Apps.GoogleDrive.csproj
+++ b/Apps.GoogleDrive/Apps.GoogleDrive.csproj
@@ -5,11 +5,11 @@
     <Nullable>enable</Nullable>
     <Product>Google Drive</Product>
     <Description>File storage and synchronization service.</Description>
-    <Version>1.0.12</Version>
+    <Version>1.0.13</Version>
     <AssemblyName>Apps.GoogleDrive</AssemblyName>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Blackbird.Applications.Sdk.Common" Version="2.3.2-alpha1" />
+    <PackageReference Include="Blackbird.Applications.Sdk.Common" Version="2.6.0" />
     <PackageReference Include="Blackbird.Applications.SDK.Extensions.FileManagement" Version="1.0.1" />
     <PackageReference Include="Blackbird.Applications.Sdk.Utils" Version="1.0.19" />
     <PackageReference Include="Google.Apis.Drive.v3" Version="1.60.0.2986" />
