--- a/Apps.GoogleDrive/Apps.GoogleDrive.csproj
+++ b/Apps.GoogleDrive/Apps.GoogleDrive.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Blackbird.Applications.Sdk.Utils" Version="1.0.19" />
     <PackageReference Include="Google.Apis.Drive.v3" Version="1.60.0.2986" />
     <PackageReference Include="Google.Apis.DriveActivity.v2" Version="1.61.0.3106" />
+    <PackageReference Include="Google.Apis.DriveLabels.v2" Version="1.68.0.3273" />
     <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="8.0.1" />
   </ItemGroup>
   <ItemGroup>
