--- a/Apps.GoogleDrive/Apps.GoogleDrive.csproj
+++ b/Apps.GoogleDrive/Apps.GoogleDrive.csproj
@@ -9,7 +9,7 @@
     <AssemblyName>Apps.GoogleDrive</AssemblyName>
   </PropertyGroup>
   <ItemGroup>
-    <None Remove="Assets\Styles\1 Branding.html" />
+    <None Remove="Assets\Styles\Branding.html" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Blackbird.Applications.Sdk.Common" Version="2.6.0" />
@@ -27,7 +27,7 @@
     <Content Include="..\README.md">
       <Link>README.md</Link>
     </Content>
-    <Content Include="Assets\Styles\1 Branding.html">
+    <Content Include="Assets\Styles\Branding.html">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
