--- a/Apps.GoogleDrive/Apps.GoogleDrive.csproj
+++ b/Apps.GoogleDrive/Apps.GoogleDrive.csproj
@@ -5,7 +5,7 @@
     <Nullable>enable</Nullable>
     <Product>Google Drive</Product>
     <Description>File storage and synchronization service.</Description>
-    <Version>1.1.0</Version>
+    <Version>1.1.1</Version>
     <AssemblyName>Apps.GoogleDrive</AssemblyName>
   </PropertyGroup>
   <ItemGroup>
@@ -23,6 +23,9 @@
   <ItemGroup>
     <Content Include="..\README.md">
       <Link>README.md</Link>
+    </Content>
+    <Content Include="Assets\Styles\Branding.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
 </Project>
