Added filters for 'Mime type' and 'File name contains'

--- a/.gitignore
+++ b/.gitignore
@@ -357,3 +357,4 @@ healthchecksdb
 
 /Apps.GoogleDrive/ApplicationConstants.cs
 /Tests.GoogleDrive/appsettings.json
+/Tests.GoogleDrive/appsettings.json
