--- a/Tests.GoogleDrive/Tests.GoogleDrive.csproj
+++ b/Tests.GoogleDrive/Tests.GoogleDrive.csproj
@@ -34,6 +34,9 @@
     <None Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="appsettings.json.example">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
